# batocera-emulationstation

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CREDITS.md  DEVNOTES.md  Dockerfile  GAMELISTS.md  README.md  THEMES.md  THEMES_BINDINGS.md  build_docker.sh  getPoFromWebsite.sh  opensans_license.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
CMake/Utils/: FindPkgMacros.cmake
data/: ResourceUtil.cpp  Resources.h
data/converted/: arrow_svg.cpp  busy_0_svg.cpp  busy_1_svg.cpp  busy_2_svg.cpp  busy_3_svg.cpp  checkbox_checked_svg.cpp  checkbox_unchecked_svg.cpp  fav_add_svg.cpp  fav_remove_svg.cpp  fontawesome_webfont_ttf.cpp  help_F1_svg.cpp  help_button_a_svg.cpp  help_button_b_svg.cpp  help_button_hotkey_svg.cpp  help_button_l2_svg.cpp  help_button_l3_svg.cpp  help_button_l_svg.cpp  help_button_r2_svg.cpp  help_button_r3_svg.cpp  help_button_r_svg.cpp  help_button_select_svg.cpp  help_button_start_svg.cpp  help_button_x_svg.cpp  help_button_y_svg.cpp  help_dpad_all_svg.cpp  help_dpad_down_svg.cpp  help_dpad_left_svg.cpp  help_dpad_leftright_svg.cpp  help_dpad_right_svg.cpp  help_dpad_up_svg.cpp  help_dpad_updown_svg.cpp  help_joystick_left_svg.cpp  help_joystick_up_svg.cpp  off_svg.cpp  on_svg.cpp  option_arrow_svg.cpp  slider_knob_svg.cpp  splash_svg.cpp  star_filled_svg.cpp  star_unfilled_svg.cpp  (+1 more)
es-app/: CMakeLists.txt  EmulationStation.h.in
es-app/src/: ApiSystem.cpp  ApiSystem.h  CloudSaves.cpp  CloudSaves.h  CollectionSystemManager.cpp  CollectionSystemManager.h  ContentInstaller.cpp  ContentInstaller.h  CustomFeatures.cpp  CustomFeatures.h  EmulationStation.aps  EmulationStation.h  FileData.cpp  FileData.h  FileFilterIndex.cpp  FileFilterIndex.h  FileSorts.cpp  FileSorts.h  FileTag.cpp  FileTag.h  GameDatabase.cpp  GameDatabase.h  Gamelist.cpp  Gamelist.h  Genres.cpp  Genres.h  GuiMenu.cpp  KeyboardMapping.cpp  KeyboardMapping.h  LangParser.cpp  LangParser.h  LibretroRatio.cpp  MetaData.cpp  MetaData.h  NetworkThread.cpp  NetworkThread.h  PlatformId.cpp  PlatformId.h  Playlists.cpp  Playlists.h  (+31 more)
es-app/src/animations/: LaunchAnimation.h
es-app/src/components/: AsyncReqComponent.cpp  CarouselComponent.cpp  CarouselComponent.h  FileSystemSelectorComponent.cpp  RatingComponent.cpp  RatingComponent.h  ScraperSearchComponent.cpp  (+2 more)
es-core/: CMakeLists.txt
es-core/src/: AsyncHandle.h  AudioManager.cpp  AudioManager.h  BindingManager.cpp  BindingManager.h  CECInput.cpp  CECInput.h  FavoriteMusicManager.cpp  FavoriteMusicManager.h  GuiComponent.cpp  GuiComponent.h  GunManager.cpp  GunManager.h  HelpPrompt.h  HelpStyle.cpp  HelpStyle.h  HttpReq.cpp  HttpReq.h  ImageIO.cpp  ImageIO.h  InputConfig.cpp  InputConfig.h  InputManager.cpp  InputManager.h  LocaleES.cpp  LocaleES.h  Log.cpp  Log.h  MameNames.cpp  MameNames.h  MultiStateInput.cpp  MultiStateInput.h  Music.cpp  Paths.cpp  Paths.h  PowerSaver.cpp  PowerSaver.h  RecalboxConf.cpp  Renderer.h  Renderer_draw_gl.cpp  (+27 more)
es-core/src/anim/: StoryboardAnimator.cpp  StoryboardAnimator.h  ThemeAnimation.h  ThemeStoryboard.cpp  ThemeStoryboard.h
es-core/src/animations/: Animation.h
es-core/src/components/: AnimatedImageComponent.cpp  AnimatedImageComponent.h  AsyncNotificationComponent.cpp  AsyncNotificationComponent.h  BatteryIconComponent.cpp  BatteryIconComponent.h  BatteryIndicatorComponent.cpp  BatteryIndicatorComponent.h  BatteryTextComponent.cpp  BatteryTextComponent.h  BusyComponent.cpp  BusyComponent.h  ButtonComponent.cpp  ButtonComponent.h  CarouselComponent.cpp  CarouselComponent.h  ClockComponent.cpp  ClockComponent.h  ComponentGrid.cpp  ComponentGrid.h  ComponentList.cpp  ComponentList.h  ComponentTab.cpp  ComponentTab.h  ControllerActivityComponent.cpp  ControllerActivityComponent.h  DateTimeComponent.cpp  DateTimeComponent.h  DateTimeEditComponent.cpp  DateTimeEditComponent.h  GridTileComponent.cpp  GridTileComponent.h  HelpComponent.cpp  HelpComponent.h  IExternalActivity.cpp  IExternalActivity.h  IList.h  ImageComponent.cpp  ImageComponent.h  ImageGridComponent.h  (+39 more)
es-core/src/guis/: GuiDetectDevice.cpp  GuiInfoPopup.cpp  GuiInfoPopup.h  GuiInputConfig.cpp  GuiInputConfig.h  GuiMsgBox.cpp  GuiMsgBoxScroll.cpp  GuiMsgBoxScroll.h  GuiTextEditPopup.cpp  GuiTextEditPopupKeyboard.cpp  GuiTextEditPopupKeyboard.h
es-core/src/math/: Misc.cpp  Misc.h  Transform4x4f.cpp  Transform4x4f.h  Vector2f.cpp  Vector2f.h  Vector2i.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h
es-core/src/playlists/: AnimatedGifPlaylist.cpp  AnimatedGifPlaylist.h  M3uPlaylist.cpp  M3uPlaylist.h
es-core/src/renderers/: GlExtensions.cpp  GlExtensions.h  Renderer.cpp  Renderer.h  Renderer_GL21.cpp  Renderer_GL21.h  Renderer_GLES10.cpp  Renderer_GLES10.h  Renderer_GLES20.cpp  Renderer_GLES20.h  Shader.cpp  Shader.h
es-core/src/resources/: Font.cpp  Font.h  ResourceManager.cpp  ResourceManager.h  TextureData.cpp  TextureData.h  TextureDataManager.cpp  TextureDataManager.h  TextureResource.cpp  TextureResource.h
es-core/src/utils/: ConcurrentVector.h  Delegate.h  FileSystemUtil.cpp  FileSystemUtil.h  HtmlColor.cpp  HtmlColor.h  MathExpr.cpp  MathExpr.h  Platform.cpp  Platform.h  Randomizer.cpp  Randomizer.h  StringListLock.cpp  StringListLock.h  StringUtil.cpp  StringUtil.h  ThreadPool.cpp  ThreadPool.h  TimeUtil.cpp  TimeUtil.h  Uri.h  VectorEx.h  VectorHelper.h  ZipFile.cpp  ZipFile.h  han.h  zip_file.hpp
es-core/src/watchers/: BatteryLevelWatcher.cpp  BatteryLevelWatcher.h  NetworkStateWatcher.cpp  NetworkStateWatcher.h  WatchersManager.cpp  WatchersManager.h
locale/: CMakeLists.txt  checkLocale.sh  emulationstation2.pot
resources/: arcaderoms.xml  checkWheelGunGamesResources.py  community_relay_servers.xml  gamesdb.xml  gamesdb.xsd  generate_arcaderoms.py  genres.xml  gungames.xml  mamebioses.xml  mamedevices.xml  metadatagames.xml  wheelgames.xml
resources/services/: index.html  main.css
resources/shaders/: blur.glsl  border.glsl  crt.glsl  grayscale.glsl  kawase_blur_5pass.glslp  kawase_blur_9pass.glslp  negative.glsl  pixelate.glsl  scanlines.glsl  shadow.glsl  vscrolleffect.glsl
(+218 files in other folders)
